Fixed indent error 4

--- a/superblocks.yaml
+++ b/superblocks.yaml
@@ -28,6 +28,6 @@ stages:
       jobs:
         - deploy_to_rinkeby
             when: manual
-            filters:
-              only:
-                - master
+            # filters:
+            #   only:
+            #     - master
